--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://i.pinimg.com/1200x/86/fd/c5/86fdc5085eda8918569732a28f81c78d.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Luxora</title>
   </head>
